--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,14 @@ android:
     - sys-img-x86-android-28
     - sys-img-armeabi-v7a-android-28
 
+before_script:
+  - chmod +x gradlew
+
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
+script: ./gradlew connectedAndroidTest
+
