--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
     useLibrary 'android.test.runner'
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
+
+    //for TravisCI
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
