--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,27 @@
 language: android
-sudo: required
-jdk: openjdk8
-
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-
+jdk: oraclejdk8
 env:
   global:
-    - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=28
-    - ANDROID_BUILD_TOOLS=28.0.3
-    - ADB_INSTALL_TIMEOUT=5 # minutes
-
+  - ANDROID_API=28
 android:
   components:
-    - tools
-    - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS
-    - android-$ANDROID_API
-    - android-$EMULATOR_API_LEVEL
-    - extra-google-m2repository
-    - extra-android-m2repository # for design library
-    - addon-google_apis-google-19 # google play services
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-
-licenses:
-  - android-sdk-preview-license-.+
+  - tools
+  - tools
+  - platform-tools
+  - build-tools-28.0.3
+  - android-${ANDROID_API}
+  - extra-android-m2repository
+  licenses:
   - android-sdk-license-.+
-  - google-gdk-license-.+
-
 before_install:
-  - chmod +x gradlew
-
+- openssl aes-256-cbc -K $encrypted_839e38d787bc_key -iv $encrypted_839e38d787bc_iv
+  -in OurStore.keystore.enc -out OurStore.keystore -d
+- yes | sdkmanager "platforms;android-28"
+before_cache: "-rm -f $HOME/.gradle/caches/modules-2/modules-2.lock -rm -fr $HOME/.gradle/caches/*/plugin-resolution/"
+cache:
+  directories:
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
+  - "$HOME/.android/build-cache"
 script:
-  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
-
+- "./gradlew assembleDebug"
