--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,30 @@
 language: android
 jdk: oraclejdk8
 env:
-  global:
-  - ANDROID_API=28
+ global:
+    - ANDROID_API_LEVEL=28
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
 android:
-  components:
-  - tools
-  - tools
-  - platform-tools
-  - build-tools-28.0.3
-  - android-${ANDROID_API}
-  - extra-android-m2repository
-  licenses:
-  - android-sdk-license-.+
-before_install:
-- openssl aes-256-cbc -K $encrypted_839e38d787bc_key -iv $encrypted_839e38d787bc_iv
-  -in OurStore.keystore.enc -out OurStore.keystore -d
-- yes | sdkmanager "platforms;android-28"
-before_cache: "-rm -f $HOME/.gradle/caches/modules-2/modules-2.lock -rm -fr $HOME/.gradle/caches/*/plugin-resolution/"
-cache:
-  directories:
-  - "$HOME/.gradle/caches/"
-  - "$HOME/.gradle/wrapper/"
-  - "$HOME/.android/build-cache"
+ components:
+    - tools
+    - platform-tools
+    # The BuildTools version used by your project
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    # The SDK version used to compile your project
+    - android-$ANDROID_API_LEVEL
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+before_script:
+    - mkdir -p "$ANDROID_HOME/licenses"
+    - echo -e "\nd56f5187479451eabf01fb78af6dfcb131a6481e" > $ANDROID_HOME/licenses/android-sdk-license
+    - echo -e "24333f8a63b6825ea9c5514f83c2829b004d1fee" >> $ANDROID_HOME/licenses/android-sdk-license
+    - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > $ANDROID_HOME/licenses/android-sdk-preview-license
 script:
-- "./gradlew assembleDebug"
+    - ./gradlew build check
