--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
  global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_TARGET=android-28
     - ANDROID_ABI=armeabi-v7a
 android:
  components:
@@ -12,14 +13,14 @@ android:
     # The BuildTools version used by your project
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
-    - android-$ANDROID_API_LEVEL
+    - $ANDROID_TARGET
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
     #emulator
-    - sys-img-${ANDROID_ABI}-${ANDROID_API_LEVEL}
+    - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
@@ -31,10 +32,10 @@ before_script:
     - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > $ANDROID_HOME/licenses/android-sdk-preview-license
 script:
   - ./gradlew build jacocoTestReport assembleAndroidTest
-  - echo no | android create avd --force -n test -t $ANDROID_API_LEVEL --abi $ANDROID_ABI
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- bash <(curl -s https://codecov.io/bash)
