Add jacoco-android plugin dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'jacoco-android'
+
+jacoco {
+    toolVersion = "0.8.3"
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+}
+
 
 android {
     compileSdkVersion 28
@@ -29,6 +39,7 @@ android {
     lintOptions {
         abortOnError false
     }
+    
 }
 
 dependencies {
