--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - addon-google_apis-google-$ANDROID_TARGET
     #emulator
     - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
 licenses:
