--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,14 @@ android {
             testCoverageEnabled true
         }
     }
+    
+    testOptions {
+    unitTests.all {
+      jacoco {
+        includeNoLocationClasses = true
+      }
+    }
+  }
 
     useLibrary 'android.test.runner'
     useLibrary 'android.test.base'
