--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: android
 jdk: oraclejdk8
+before_cache:
+ - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+ - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+ directories:
+ - $HOME/.gradle/caches/
+ - $HOME/.gradle/wrapper/
 env:
  global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_TARGET=android-28
+    - ANDROID_TARGET=android-21
     - ANDROID_ABI=armeabi-v7a
 android:
  components:
@@ -13,7 +21,9 @@ android:
     # The BuildTools version used by your project
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
-    - $ANDROID_TARGET
+    - android-$ANDROID_TARGET
+    #emulator API
+    -$ANDROID_TARGET
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
@@ -21,6 +31,8 @@ android:
     - addon-google_apis-google-$ANDROID_TARGET
     #emulator
     - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
+    - sys-img-${ANDROID_ABI}-addon-google_apis-google-android-$ANDROID_API_LEVEL
+    - sys-img-${ANDROID_ABI}-addon-google_apis-google-$ANDROID_TARGET
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
