--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
  global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_TARGET=android-21
+    - ANDROID_TARGET=android-22
     - ANDROID_ABI=armeabi-v7a
 android:
  components:
@@ -21,7 +21,7 @@ android:
     # The BuildTools version used by your project
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
-    - android-$ANDROID_TARGET
+    - android-$ANDROID_API_LEVEL
     #emulator API
     -$ANDROID_TARGET
     # Additional components
@@ -31,8 +31,8 @@ android:
     - addon-google_apis-google-$ANDROID_TARGET
     #emulator
     - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
-    - sys-img-${ANDROID_ABI}-addon-google_apis-google-android-$ANDROID_API_LEVEL
-    - sys-img-${ANDROID_ABI}-addon-google_apis-google-$ANDROID_TARGET
+    - sys-img-${ANDROID_ABI}-addon-google_apis-google-${ANDROID_TARGET}
+    - sys-img-${ANDROID_ABI}-addon-google_apis-google-${ANDROID_TARGET}
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
