--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,17 @@ jobs:
       - run:
           name: Run Tests
           command: ./gradlew lint test
+      -run:
+          name: Testing
+          command: ./gradlew build jacocoTestReport assembleAndroidTest
+                   echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+                   emulator -avd test -no-skin -no-audio -no-window &
+                   android-wait-for-emulator
+                   adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+                   ./gradlew connectedCheck
+      -run:
+          name: Publish Test Results
+          command: bash <(curl -s https://codecov.io/bash)
       - store_artifacts:
           path: app/build/reports
           destination: reports
