--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,12 @@
 version: 2
 jobs:
   build:
+    # request codecov to detect CI environment to pass through to docker
+    ci_env=`bash <(curl -s https://codecov.io/env)`
+    docker run $ci_env ...
+       |----- inside docker container
+       | # exec tests
+       | bash <(curl -s https://codecov.io/bash)
     docker:
       # specify the version you desire here
       - image: circleci/android:api-28
@@ -13,7 +19,7 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-
+    
     working_directory: ~/code
 
     environment:
