--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,11 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2
+version: 2.1
+
+orbs:
+  codecov: codecov/codecov@1.0.1
+  
 jobs:
   build:
     docker:
@@ -54,3 +58,6 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+          
+      -codecov/upload:
+        file: {{app/build/test-results}}
