--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
     
-    working_directory: ~/code
+    working_directory: ~/repo
 
     environment:
       # Customize the JVM maximum heap limit
