--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,8 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2.1
+version: 2
 
-orbs:
-  codecov: codecov/codecov@1.0.1
-  
 jobs:
   build:
     docker:
@@ -18,7 +15,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
     
-    working_directory: ~/repo
+    working_directory: ~/code
 
     environment:
       # Customize the JVM maximum heap limit
@@ -59,5 +56,6 @@ jobs:
       - store_test_results:
           path: app/build/test-results
           
-      - codecov/upload:
-          file: {{app/build/test-results}}
+      - run:
+          name: push code coverage
+          command: bash <(curl -s https://codecov.io/bash)
