--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,4 +60,4 @@ jobs:
           path: app/build/test-results
           
       - codecov/upload:
-          file: app/build/test-results
+          path: app/build/test-results
