--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name=".DevLogProvider"
+            android:authorities="com.zakariyaf.devlog.provider"
+            android:enabled="true"
+            android:exported="true"></provider>
+
         <activity
-            android:name="com.zakariyaf.DevLog.ProjectActivity"
+            android:name=".ProjectActivity"
             android:label="@string/title_activity_project"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.zakariyaf.DevLog.ProjectListActivity"
+            android:name=".ProjectListActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.zakariyaf.DevLog.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -27,9 +33,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.zakariyaf.DevLog.SettingsActivity"
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.zakariyaf.DevLog.MainActivity">
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.zakariyaf.DevLog.MainActivity" />
