--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,10 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         //JacocoReport plugin for code coverage
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
 
